# ctdd

./: .gitignore  Makefile.am  clean_test.sh  configure  configure.ac  test.h  test.sh
foo/: Makefile.am  foo  foo.c  main.c
foo_test/: Makefile.am  main.c
